--- a/src/X-rayHTML.css
+++ b/src/X-rayHTML.css
@@ -32,6 +32,9 @@
 	border-top: 1px solid rgba(0,0,0,.1);
 	border-radius: 0 0 .3em .3em;
 }
+.xrayhtml .snippet {
+	background-color: #fff;
+}
 .xrayhtml .snippet,
 .xrayhtml .source-panel > pre {
 	padding: 16px;
@@ -58,7 +61,6 @@
 
 /* Flip Animation */
 .method-flip {
-	margin: 0 0 1px; /* fixes missing bottom border in FF */
 	background-color: #fff;
 	border-radius: .3em;
 	-webkit-perspective: 2500px;
@@ -67,21 +69,28 @@
 }
 .method-flip .flip-panel {
 	position: relative;
-	transition: all .4s ease-in-out;
+	z-index: 1;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 }
-.method-flip.view-source .flip-panel {
-	transform: rotateY( 180deg );
-}
+/* front = snippet, back = source */
 .flip-panel .snippet,
 .flip-panel .source-panel {
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	transition: all .4s ease-in-out;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-/* front = snippet, back = source */
 .flip-panel .snippet {
 	position: relative;
-	transform: rotateY( 0deg );
 	z-index: 2;
+	margin: 0 0 1px; /* fixes missing bottom border in FF */
+	-webkit-transform: rotateY( 0deg );
+	-moz-transform: rotateY( 0deg );
+	transform: rotateY( 0deg );
 }
 .flip-panel .source-panel {
 	position: absolute;
@@ -91,10 +100,35 @@
 	width: 100%;
 	height: 100%;
 	overflow-x: auto;
+	-webkit-transform: rotateY( -180deg );
+	-moz-transform: rotateY( -180deg );
+	transform: rotateY( -180deg );
+}
+.view-source .flip-panel .snippet {
+	-webkit-transform: rotateY( 180deg );
+	-moz-transform: rotateY( 180deg );
 	transform: rotateY( 180deg );
+}
+.view-source .flip-panel .source-panel {
+	-webkit-transform: rotateY( 0deg );
+	-moz-transform: rotateY( 0deg );
+	transform: rotateY( 0deg );
 }
 
 iframe.xray-iframe {
 	border: 0;
 	width: 100%
+}
+
+.btn-xray-copy {
+	width: auto;
+	display: inline-block;
+	position: absolute;
+	z-index: 99;
+	right: 0;
+	bottom: 0;
+	padding-left: 1em;
+	padding-right: 1em;
+	border-radius: 5px 0 0 0;
+	border-width: 1px 0 0 1px;
 }
